--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Navbar Section and Hamburger when screen gets smaller  -->
 
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2">
+  <nav class="navbar navbar-expand-lg bg-light navbar-light py-2">
     <div class="container">
       <a href="#" class="navbar-brand">Insurance</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -49,7 +49,7 @@
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
-           <h1>Lorem ipsum <span class="text-warning">dolor</span></h1>
+           <h1>Lorem ipsum <span class="text-info">dolor</span></h1>
            <p class="lead my-4">
              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
            </p>
@@ -62,7 +62,7 @@
   
    <!-- Email form section -->
 
-   <section class="bg-info text-dark p-5">
+   <section class="bg-warning text-dark p-5">
      <div class="container">
        <div class="d-md-flex justify-content-between align-items-center">
          <h3 class="mb-3 mb-md-0">
@@ -77,7 +77,34 @@
      </div>
    </section>
 
+  <!-- Services Section -->
+
+  <section id="services" class="p-5 bg-secondary">
+  <div class="container">
+    <div class="row align-items-center justify-content-between">
+      <div class="col-md">
+        <img src="img/services.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-md p-5">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, inventore.</h2>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi alias temporibus consequatur rem quis voluptates modi ipsam, ab asperiores.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque placeat animi aspernatur, tempora facere tempore recusandae ipsum iusto laboriosam voluptatum dolor ipsa cum molestiae optio! Quas ad quis velit vel!
+        </p>
+        <a href="#" class="btn btn-light">
+          <i class="bi bi-chevron-right">
+            Read more
+          </i>  
+        </a>
+      </div>
+    </div>
+  </div>
+  </section>
+
   <!-- Pricing -->
+
    <section class="p-5">
       <div class="container">
         <div class="row text-center g-4">
@@ -129,6 +156,33 @@
         </div>
       </div>
     </section>
+
+    <!-- Reviews Section -->
+
+  <section id="reviews" class="p-5 bg-dark text-light">
+  <div class="container">
+    <div class="row align-items-center justify-content-between">
+      
+      <div class="col-md p-5">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, inventore.</h2>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi alias temporibus consequatur rem quis voluptates modi ipsam, ab asperiores.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque placeat animi aspernatur, tempora facere tempore recusandae ipsum iusto laboriosam voluptatum dolor ipsa cum molestiae optio! Quas ad quis velit vel!
+        </p>
+        <a href="#" class="btn btn-light">
+          <i class="bi bi-chevron-right">
+            Read more
+          </i>  
+        </a>
+      </div>
+        <div class="col-md">
+          <img src="img/review.png" class="img-fluid" alt="">
+          </div>
+    </div>
+  </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
