--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light navbar-light py-2">
     <div class="container">
-      <a href="#" class="navbar-brand">Insurance</a>
+      <a href="#" class="navbar-brand"><img src="img/logo1.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,7 +45,7 @@
    
    <!-- About Section -->
 
-   <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
+   <section class="bg-light text-dark p-5 p-lg-0 text-center text-sm-start">
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
@@ -53,16 +53,16 @@
            <p class="lead my-4">
              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
            </p>
-           <button class="btn btn-light btn-lg">Contact us</button>
+           <button class="btn btn-dark btn-lg">Contact us</button>
          </div>
-         <img class="img-fluid w-50 d-none d-sm-block" src="img/about.svg" alt="">
+         <img class="img-fluid w-50 d-none d-sm-block opacity-25 mb-4" src="img/about1.png" alt="">
        </div>
      </div>
    </section>
   
    <!-- Email form section -->
 
-   <section class="bg-warning text-dark p-5">
+   <section class="bg-info text-dark p-5">
      <div class="container">
        <div class="d-md-flex justify-content-between align-items-center">
          <h3 class="mb-3 mb-md-0">
@@ -79,7 +79,7 @@
 
   <!-- Services Section -->
 
-  <section id="services" class="p-5 bg-secondary">
+  <section id="services" class="p-5 bg-dark text-light">
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-md">
@@ -91,7 +91,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi alias temporibus consequatur rem quis voluptates modi ipsam, ab asperiores.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque placeat animi aspernatur, tempora facere tempore recusandae ipsum iusto laboriosam voluptatum dolor ipsa cum molestiae optio! Quas ad quis velit vel!
+          
         </p>
         <a href="#" class="btn btn-light">
           <i class="bi bi-chevron-right">
@@ -105,7 +105,7 @@
 
   <!-- Pricing -->
 
-   <section class="p-5">
+   <section id="pricing" class="p-5">
       <div class="container">
         <div class="row text-center g-4">
           <div class="col-md">
@@ -169,7 +169,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi alias temporibus consequatur rem quis voluptates modi ipsam, ab asperiores.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque placeat animi aspernatur, tempora facere tempore recusandae ipsum iusto laboriosam voluptatum dolor ipsa cum molestiae optio! Quas ad quis velit vel!
+          
         </p>
         <a href="#" class="btn btn-light">
           <i class="bi bi-chevron-right">
