--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light navbar-light py-2">
     <div class="container">
-      <a href="#" class="navbar-brand"><img src="img/logo1.png"></a>
+      <a href="#" class="navbar-brand"><img src="img/logo.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
       </button>
