--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css' rel='stylesheet' />
   <link rel=""stylesheet" href="style.css">
 
   <title>Insurance</title>
@@ -48,7 +49,7 @@
    
    <!-- About Section -->
 
-   <section class="bg-light text-dark p-5 p-lg-0 text-center text-sm-start">
+   <section class="bg-light text-dark p-5 p-lg-0 mt-5 text-center text-sm-start">
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
@@ -63,19 +64,19 @@
      </div>
    </section>
   
-   <!-- Email form section -->
+   <!-- Mission Statement section -->
 
    <section class="bg-info text-dark p-5">
      <div class="container">
-       <div class="d-md-flex justify-content-between align-items-center">
-         <h3 class="mb-3 mb-md-0">
-           Send us an email today for more information
-         </h3>
-         <div class="input-group new-input">
-            <input type="text" 
-            class="form-control" placeholder="Recipient's e-mail" aria-label="Recipient's email" aria-describedby="button-addon2">
-            <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Email</button>
-          </div>
+       <div class="col-d-md-flex justify-content-between align-items-center">
+        <figure class="text-center">
+          <blockquote class="blockquote"></blockquote>
+            <h2>Mission Statement:</h2>
+          </blockquote> 
+          <figcaption class="blockquote-footer text-light">
+            <h4 class="font-italic">“To be a great company committed to improving the lives of the people in the communities in which we operate.”</h4>
+          </figcaption>
+        </figure>
        </div>
      </div>
    </section>
@@ -117,7 +118,7 @@
                 <div class="h1 mb-3">
                   <i class="bi bi-heart"></i>
                 </div>
-                <h3 class="card-title mb-3">Life Insurance</h3>
+                <h3 class="card-title mb-3">Health Insurance</h3>
                 <p class="card-text">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Iure, quas quidem possimus dolorum esse eligendi?
@@ -130,9 +131,9 @@
             <div class="card bg-secondary text-light">
               <div class="card-body text-center">
                 <div class="h1 mb-3">
-                  <i class="bi bi-truck"></i>
+                  <i class="bi bi-life-preserver"></i>
                 </div>
-                <h3 class="card-title mb-3">Motor Vehicle Insurance</h3>
+                <h3 class="card-title mb-3">Life Insurance</h3>
                 <p class="card-text">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Iure, quas quidem possimus dolorum esse eligendi?
@@ -188,7 +189,7 @@
   </section>
 
   <!-- FAQ Section -->
-    <section id="faq" class="p-5">
+    <section id="faq" class="p-5 bg-info">
       <div class="container">
         <h2 class="text-center mb-4">Frequently Asked Questions</h2>
         <div class="accordion accordion-flush" id="questions">
@@ -252,32 +253,100 @@
 </section>
 
 <!-- Contact section -->
-<div class="p-5">
-  <div class="container">
-    <div class="row g-4">
-      <div class="col-md">
-        <h2 class="text-center mb-4">Contact Info</h2>
-        <ul class="list-group list-group-flush lead">
-          <li class="list-group-item">
-            <span class="fw-bold">Phone Number: +501 607-2524</span>
-          </li>
-          <li class="list-group-item">
-            <span class="fw-bold">Email Address: mjbardalez3396@gmail.com</span>
-          </li>
-          <li class="list-group-item">
-            <span class="fw-bold">Main Location: Barton Creek St</span>
-          </li>
-          <li class="list-group-item">
-            <span class="fw-bold">Main Location: Barton Creek St</span>
-          </li>
-        </ul>
+<section id="contact" class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md">
+            <h2 class="text-center mb-4">Contact Info</h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Agent Name:</span> Florence Williams 
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Phone Number:</span> (501) 600 9316
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Location:</span> 1929 Barton Creek, Belmopan, Belize
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Email:</span> florvw34@yahoo.com 
+              </li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <div id='map' style='width: 100%; height: 100%;'>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
+    </section>
+    <hr/>
+
+    <!-- Contact Form Section -->
+    <section class="p-2 bg-muted">
+      <div class="container mt-5 text-start">
+        <h1>Contact us</h1>
+        <form class="row g-3" action="https://formsubmit.co/mjbardalez3396@gmail.com" method="POST">
+          <div class="col-md-6">
+            <label for="firstname" class="form-label">
+              First Name
+            </label>
+            <input type="text" class="form-control" id="firstname" required>
+          </div>
+          <div class="col-md-6">
+            <label for="lastname" class="form-label">
+              Last Name
+            </label>
+            <input type="text" class="form-control" id="lastname" required>
+          </div>
+          <div class="col-md-8">
+            <label for="emailinfo" class="form-label">
+              E-mail
+            </label>
+            <input type="email" class="form-control" id="emailinfo" required>
+          </div>
+          <div class="col-md-4">
+            <label for="phonenumber" class="form-label">Phone Number (Optional)</label>
+            <input type="text" class="form-control" id="phonenumber" placeholder="+501 607-2524">
+          </div>
+          <div class="col-md-12">
+            <label for="comment" class="form-label">
+              Leave a comment
+            </label>
+            <textarea class="form-control" id="comment" rows="3" required></textarea>
+          </div>
+          <div class="col-md-12">
+            <button type="submit" class="btn btn-info">
+              Submit
+            </button>
+          </div>
+        </form>
+      
+      </div>
+    </section> 
+
+    <!-- Footer Section  -->
+    <footer class="p-5 bg-dark text-light text-center position-relative">
+      <div class="container">
+        <p class="lead">Copyright &copy; 2022 Michael Bardalez</p>
+      </div>
+    </footer>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+
+  <script>
+  mapboxgl.accessToken = 'pk.eyJ1IjoibWJhcmRhbGV6IiwiYSI6ImNsMHBqYTZhczIwYzgzZG1nMnJsNjNlYWQifQ.5LuW_iJGkw9c5r3M_GniZg';
+  const map = new mapboxgl.Map({
+  container: 'map', // container ID
+  style: 'mapbox://styles/mapbox/streets-v11', // style URL
+  center: [-88.77475820147517,17.245573744660803], // starting position [lng, lat]
+  zoom: 18 // starting zoom
+  });
+  </script>
+  
 </body>
 </html>
