--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <button type="submit" class="btn btn-info">
               Submit
             </button>
-          <input type="hidden" name="_next" value="#thankyou.html">
+          <input type="hidden" name="_next" value="https://michaelbardalez.github.io/insurancetemplate/thankyou.html">
           <input type="hidden" name="_subject" value="New Inquiry">
           <input type="hidden" name="_captcha" value="false">
           </div>
