--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <section class="p-2 bg-muted">
       <div class="container mt-5 text-start">
         <h1>Contact us</h1>
-        <form class="row g-3" target="_blank" action="mailto:mjbardalez3396@gmail.com" method="POST">
+        <form class="row g-3" target="_blank" action="https://formsubmit.co/fb369ccfb7985326662c9aca7da2cdea " method="POST">
           <div class="col-md-6">
             <label for="firstname" class="form-label">
               First Name
@@ -319,8 +319,10 @@
             <button type="submit" class="btn btn-info">
               Submit
             </button>
-          
           </div>
+          <input type="hidden" name="_next" value="#thankyou.html">
+          <input type="hidden" name="_subject" value="New Inquiry">
+          <input type="hidden" name="_captcha" value="false">
         </form>
       
       </div>
