--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
-           <h1>Lorem ipsum <span class="text-info">dolor</span></h1>
+           <h1>Lorem ipsum <span class="text-info">Dolor</span></h1>
            <p class="lead my-4">
              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
            </p>
@@ -286,7 +286,7 @@
     <section class="p-2 bg-muted">
       <div class="container mt-5 text-start">
         <h1>Contact us</h1>
-        <form class="row g-3" target="_blank" action="https://formsubmit.co/fb369ccfb7985326662c9aca7da2cdea " method="POST">
+        <form class="row g-3" action="https://formsubmit.co/fb369ccfb7985326662c9aca7da2cdea " method="POST">
           <div class="col-md-6">
             <label for="firstname" class="form-label">
               First Name
@@ -320,7 +320,7 @@
               Submit
             </button>
           </div>
-          <input type="hidden" name="_next" value="#thankyou.html">
+          <input type="hidden" name="_next" value="https://michaelbardalez.github.io/insurancetemplate/thankyou.html">
           <input type="hidden" name="_subject" value="New Inquiry">
           <input type="hidden" name="_captcha" value="false">
         </form>
