--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
-           <h1>Lorem ipsum <span class="text-info">Dolor</span></h1>
+           <h1>Lorem ipsum <span class="text-info">dolor</span></h1>
            <p class="lead my-4">
              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
            </p>
@@ -315,11 +315,14 @@
             </label>
             <textarea class="form-control" id="comment" rows="3" placeholder="Enter a Message" required></textarea>
           </div>
+          <label for="fname">F name:</label><br>
+          <input type="text" id="fname" name="fname"><br>                                                                                  
           <div class="col-md-12">
             <button type="submit" class="btn btn-info">
               Submit
             </button>
           </div>
+                                                      
           <input type="hidden" name="_next" value="https://michaelbardalez.github.io/insurancetemplate/thankyou.html">
           <input type="hidden" name="_subject" value="New Inquiry">
           <input type="hidden" name="_captcha" value="false">
