--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
-           <h1>Lorem ipsum <span class="text-info">dolor</span></h1>
+           <h1>Lorem ipsum <span class="text-info">Dolor</span></h1>
            <p class="lead my-4">
              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
            </p>
@@ -291,32 +291,30 @@
             <label for="firstname" class="form-label">
               First Name
             </label>
-            <input type="text" class="form-control" id="firstname" required>
+            <input type="text" class="form-control" id="firstname" name="firstname" required>
           </div>
           <div class="col-md-6">
             <label for="lastname" class="form-label">
               Last Name
             </label>
-            <input type="text" class="form-control" id="lastname" required>
+            <input type="text" class="form-control" id="lastname" name="lastname" required>
           </div>
           <div class="col-md-8">
             <label for="emailinfo" class="form-label">
               E-mail
             </label>
-            <input type="email" class="form-control" id="emailinfo" required>
+            <input type="email" class="form-control" id="emailinfo" name="emailinfo" required>
           </div>
           <div class="col-md-4">
             <label for="phonenumber" class="form-label">Phone Number (Optional)</label>
-            <input type="text" class="form-control" id="phonenumber" placeholder="+501 607-2524">
+            <input type="text" class="form-control" id="phonenumber" name="phonenumber" placeholder="+501 607-2524">
           </div>
           <div class="col-md-12">
             <label for="comment" class="form-label">
               Leave a comment
             </label>
-            <textarea class="form-control" id="comment" rows="3" placeholder="Enter a Message" required></textarea>
-          </div>
-          <label for="fname">F name:</label><br>
-          <input type="text" id="fname" name="fname"><br>                                                                                  
+            <textarea class="form-control" id="comment" name="comment" maxlength="200" rows="3" placeholder="Enter a Message" required></textarea>
+          </div>                                                                                  
           <div class="col-md-12">
             <button type="submit" class="btn btn-info">
               Submit
