--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#services" class="nav-link">Services</a>
           </li>
           <li class="nav">
-            <a href="#pricing" class="nav-link">Pricing</a>
+            <a href="#pricing" class="nav-link">Packages</a>
           </li>
           <li class="nav">
             <a href="#reviews" class="nav-link">Reviews</a>
@@ -46,18 +46,19 @@
       </div>  
     </div>
    </nav>
+   <div id="about"></div>
    
    <!-- About Section -->
-
+   
    <section class="bg-light text-dark p-5 p-lg-0 mt-5 text-center text-sm-start">
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
-           <h1>Lorem ipsum <span class="text-info">Dolor</span></h1>
+           <h1>Lorem ipsum <span class="text-info">folor</span></h1>
            <p class="lead my-4">
              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
            </p>
-           <button class="btn btn-dark btn-lg">Contact us</button>
+           <a href="#contact"><button class="btn btn-dark btn-lg">Contact us</button></a>
          </div>
          <img class="img-fluid w-50 d-none d-sm-block opacity-25 mb-4" src="img/about1.png" alt="">
        </div>
@@ -79,11 +80,12 @@
         </figure>
        </div>
      </div>
+     <div id="services"></div>
    </section>
 
   <!-- Services Section -->
-
-  <section id="services" class="p-5 bg-dark text-light">
+  
+  <section class="p-5 bg-dark text-light">
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-md">
@@ -105,11 +107,12 @@
       </div>
     </div>
   </div>
+  <div id="pricing"></div>
   </section>
 
   <!-- Pricing -->
 
-   <section id="pricing" class="p-5">
+   <section class="p-5">
       <div class="container">
         <div class="row text-center g-4">
           <div class="col-md">
@@ -159,11 +162,12 @@
           </div>
         </div>
       </div>
+      <div id="reviews"></div>
     </section>
 
     <!-- Reviews Section -->
 
-  <section id="reviews" class="p-5 bg-dark text-light">
+  <section class="p-5 bg-dark text-light">
   <div class="container">
     <div class="row align-items-center justify-content-between">
       
@@ -186,13 +190,15 @@
           </div>
     </div>
   </div>
+  <div id="faq"></div>
   </section>
 
   <!-- FAQ Section -->
-    <section id="faq" class="p-5 bg-info">
-      <div class="container">
-        <h2 class="text-center mb-4">Frequently Asked Questions</h2>
-        <div class="accordion accordion-flush" id="questions">
+
+  <section  class="p-5 bg-info">
+    <div class="container">
+      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+      <div class="accordion accordion-flush" id="questions">
     <!-- Question 1 -->
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingOne">
@@ -208,7 +214,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-        Accordion Item #2
+        When should I purchase a Health Insurance Plan?
       </button>
     </h2>
     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -219,18 +225,18 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-        Accordion Item #3
+        What does Travel Insurance cover?
       </button>
     </h2>
-    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
     </div>
   </div>
   <!-- Question 4 -->
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingFour">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-        Accordian item #4
+        Do I really need life insurance? 
       </button>
     </h2>
     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#questions">
@@ -241,19 +247,27 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingFive">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-        Accordian item #5
+        How do I buy life insurance?
       </button>
     </h2>
     <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#questions">
       <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
     </div>
   </div>
+  <div class="col-md text-center">
+    <a href="#" class="btn btn-light mt-2">
+      <i class="bi bi-chevron-right">
+        Read more
+      </i>
+    </a>
+  </div>  
 </div>
+<div id="contact"></div>
       
 </section>
 
 <!-- Contact section -->
-<section id="contact" class="p-5">
+<section class="p-5">
       <div class="container">
         <div class="row g-4">
           <div class="col-md">
