--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
      <div class="container">
        <div class="d-sm-flex align-items-center justify-content-between">
          <div>
-           <h1>Lorem ipsum <span class="text-info">folor</span></h1>
+           <h1>Hello! I'm <span class="text-info">Florence Williams</span></h1>
            <p class="lead my-4">
-             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorem hic doloribus incidunt esse debitis, dolores natus. Id quos suscipit ab, explicabo quidem cum inventore fuga? 
+            I am an agent for Sagicor Insurance, and I'm looking forward to getting you the best deal there is in insurance that is reliable, affordable and impactful. 
            </p>
            <a href="#contact"><button class="btn btn-dark btn-lg">Contact us</button></a>
          </div>
@@ -92,9 +92,9 @@
         <img src="img/services.png" class="img-fluid" alt="">
       </div>
       <div class="col-md p-5">
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, inventore.</h2>
+        <h2>The Insurance packages we provide here at Sagicor is unmatched.</h2>
         <p class="lead">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi alias temporibus consequatur rem quis voluptates modi ipsam, ab asperiores.
+          I will work with you diligently and ensure you are provided with the best Insurance package that suits you and your family needs. Everyone deserves to live a happy and comfortable life. That is exactly what we do here at Sagicor. Looking forward to you becoming a part of the family!
         </p>
         <p>
           
@@ -123,8 +123,7 @@
                 </div>
                 <h3 class="card-title mb-3">Health Insurance</h3>
                 <p class="card-text">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Iure, quas quidem possimus dolorum esse eligendi?
+                  our health insurance package will provide you with extensive coverage which includes: Medical expenses, hospitilization costs, appointment/consultation fees, medication fees and more.
                 </p>
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
@@ -138,8 +137,7 @@
                 </div>
                 <h3 class="card-title mb-3">Life Insurance</h3>
                 <p class="card-text">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Iure, quas quidem possimus dolorum esse eligendi?
+                  Our life insurance package will also provide extensive coverage for other aspects of your life, such home expenses from damage due to natural disasters or motor vehicle expenses from accidents.
                 </p>
                 <a href="#" class="btn btn-dark">Read More</a>
               </div>
@@ -153,8 +151,7 @@
                 </div>
                 <h3 class="card-title mb-3">General Insurance</h3>
                 <p class="card-text">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Iure, quas quidem possimus dolorum esse eligendi?
+                  Our general insurance can cover anything else that nots listed in the other packages such as death, funeral expenses for example. It also can be used for your family members to secure their future.
                 </p>
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
@@ -172,7 +169,7 @@
     <div class="row align-items-center justify-content-between">
       
       <div class="col-md p-5">
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, inventore.</h2>
+        <h2>Our family is huge, here is some welcoming messages from some of <them:></them:></h2>
         <p class="lead">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi alias temporibus consequatur rem quis voluptates modi ipsam, ab asperiores.
         </p>
@@ -206,8 +203,8 @@
         What is Insurance?
       </button>
     </h2>
-    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+    <div id="flush-collapseOne" class="accordion-collapse collapse bg-secondary" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+      <div class="accordion-body">a thing providing protection against a possible eventuality.</div>
     </div>
   </div>
    <!-- Question 2 -->
@@ -217,8 +214,8 @@
         When should I purchase a Health Insurance Plan?
       </button>
     </h2>
-    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse bg-secondary" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Generally, you need life insurance if other people depend on your income, or if you have debt that will carry on after your death. After all, you don't want to leave your loved ones without money to live on.</div>
     </div>
   </div>
     <!-- Question 3 -->
@@ -228,8 +225,8 @@
         What does Travel Insurance cover?
       </button>
     </h2>
-  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+  <div id="flush-collapseThree" class="accordion-collapse collapse bg-secondary" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+    <div class="accordion-body">Most travel insurance plans cover medical emergencies, trip cancellation, trip interruption, delays, medical evacuation, and lost, damaged, or stolen luggage.</div>
     </div>
   </div>
   <!-- Question 4 -->
@@ -239,8 +236,8 @@
         Do I really need life insurance? 
       </button>
     </h2>
-    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#questions">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+    <div id="flush-collapseFour" class="accordion-collapse collapse bg-secondary" aria-labelledby="flush-headingFour" data-bs-parent="#questions">
+      <div class="accordion-body">Having good health insurance is one of the most crucial pieces to your financial plan. It's vital to your financial health by helping protect you from financial calamity.</div>
     </div>
   </div>
   <!-- Question 5 -->
@@ -250,8 +247,8 @@
         How do I buy life insurance?
       </button>
     </h2>
-    <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#questions">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+    <div id="flush-collapseFive" class="accordion-collapse collapse bg-secondary" aria-labelledby="flush-headingFive" data-bs-parent="#questions">
+      <div class="accordion-body">You can buy your insurance policy through an individual agent, a corporate agent or a broker.</div>
     </div>
   </div>
   <div class="col-md text-center">
@@ -362,7 +359,7 @@
   container: 'map', // container ID
   style: 'mapbox://styles/mapbox/streets-v11', // style URL
   center: [-88.77475820147517,17.245573744660803], // starting position [lng, lat]
-  zoom: 18 // starting zoom
+  zoom: 16 // starting zoom
   });
   </script>
   
