--- a/index.html
+++ b/index.html
@@ -344,15 +344,20 @@
     <footer class="p-5 bg-dark text-light text-center position-relative">
       <div class="container">
         <p class="lead">Copyright &copy; 2022 Michael Bardalez</p>
+        <a href="" class="position-absolute bottom-0 end-0 p-5">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
       </div>
     </footer>
 
 
-
+  <!-- This script is for bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+  <!-- Mapbox api script -->
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
 
+  <!-- This script is for show map for the location using mapbox -->
   <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoibWJhcmRhbGV6IiwiYSI6ImNsMHBqYTZhczIwYzgzZG1nMnJsNjNlYWQifQ.5LuW_iJGkw9c5r3M_GniZg';
   const map = new mapboxgl.Map({
@@ -361,6 +366,16 @@
   center: [-88.77475820147517,17.245573744660803], // starting position [lng, lat]
   zoom: 16 // starting zoom
   });
+  </script>
+
+  <!-- This script closes the hamburger nav when you select an option -->
+  <script>
+  const navLinks = document.querySelectorAll('.nav')
+  const menuToggle = document.getElementById('navmenu')
+  const bsCollapse = new bootstrap.Collapse(menuToggle)
+  navLinks.forEach((l) => {
+    l.addEventListener('click', () => { bsCollapse.toggle() })
+  })
   </script>
   
 </body>
