--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
   <!-- This script closes the hamburger nav when you select an option -->
   <script>
-  const navLinks = document.querySelectorAll('.nav')
+  const navLinks = document.querySelectorClass('nav')
   const menuToggle = document.getElementById('navmenu')
   const bsCollapse = new bootstrap.Collapse(menuToggle)
   navLinks.forEach((l) => {
